# drone_detection

./: README.md
gr-Drone_ML/: CMakeLists.txt  MANIFEST.md
gr-Drone_ML/apps/: CMakeLists.txt
gr-Drone_ML/cmake/Modules/: gnuradio-Drone_MLConfig.cmake
gr-Drone_ML/docs/: CMakeLists.txt  README.Drone_ML
gr-Drone_ML/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-Drone_ML/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-Drone_ML/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-Drone_ML/grc/: CMakeLists.txt  Drone_ML_ml_testing.block.yml
gr-Drone_ML/include/gnuradio/Drone_ML/: CMakeLists.txt  api.h
gr-Drone_ML/lib/: CMakeLists.txt
gr-Drone_ML/python/Drone_ML/: CMakeLists.txt  __init__.py  ml_testing.py
gr-Drone_ML/python/Drone_ML/bindings/: CMakeLists.txt  python_bindings.cc
gr-Energy_Detector/: CMakeLists.txt  MANIFEST.md
gr-Energy_Detector/apps/: CMakeLists.txt
gr-Energy_Detector/cmake/Modules/: gnuradio-Energy_DetectorConfig.cmake
gr-Energy_Detector/docs/: CMakeLists.txt  README.Energy_Detector
gr-Energy_Detector/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-Energy_Detector/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-Energy_Detector/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-Energy_Detector/grc/: CMakeLists.txt  Energy_Detector_Energy_Detector.block.yml  Energy_Detector_Energy_Detector_V2.block.yml
gr-Energy_Detector/include/gnuradio/Energy_Detector/: CMakeLists.txt  api.h
gr-Energy_Detector/lib/: CMakeLists.txt
gr-Energy_Detector/python/Energy_Detector/: CMakeLists.txt  Energy_Detector.py  Energy_Detector_V2.py  __init__.py
gr-Energy_Detector/python/Energy_Detector/bindings/: CMakeLists.txt  python_bindings.cc
gr-OFDM_Estimator/: CMakeLists.txt  MANIFEST.md
gr-OFDM_Estimator/apps/: CMakeLists.txt
gr-OFDM_Estimator/cmake/Modules/: gnuradio-OFDM_EstimatorConfig.cmake
gr-OFDM_Estimator/docs/: CMakeLists.txt  README.OFDM_Estimator
gr-OFDM_Estimator/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-OFDM_Estimator/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-OFDM_Estimator/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-OFDM_Estimator/grc/: CMakeLists.txt  OFDM_Estimator_OFDM_Estimator.block.yml
gr-OFDM_Estimator/include/gnuradio/OFDM_Estimator/: CMakeLists.txt  OFDM_Estimator.h  api.h
gr-OFDM_Estimator/lib/: CMakeLists.txt  OFDM_Estimator_impl.cc  OFDM_Estimator_impl.h
gr-OFDM_Estimator/python/OFDM_Estimator/: CMakeLists.txt  __init__.py
gr-OFDM_Estimator/python/OFDM_Estimator/bindings/: CMakeLists.txt  OFDM_Estimator_python.cc  python_bindings.cc
gr-OFDM_Estimator/python/OFDM_Estimator/bindings/docstrings/: OFDM_Estimator_pydoc_template.h
